--- a/index.html
+++ b/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id="main">
+      <div class="big-flex">
+        <div class="image-container">
+          <img src="./images/phones.png" alt="" class="phone-image" />
+        </div>
+        <div class="right-section">
+          <div class="header-right-section">
+            <img src="./images/brand.png" alt="" />
+            <div class="login-btn">
+              <img src="./images/home.png" alt="" />
+              <p>Log in</p>
+            </div>
+          </div>
+          <div class="text-right-section">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>
+              Instagram Instagram is a fast, beautiful and fun way to share your
+              life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="images">
+              <img src="./images/badge-iphone.png" alt="" />
+              <img src="./images/badge-android.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="flex-footer">
+          <ul>
+            <li class="color-blue">About Us</li>
+            <li class="color-blue">Support</li>
+            <li class="color-blue">Blog</li>
+            <li class="color-blue">Press</li>
+            <li class="color-blue">API</li>
+            <li class="color-blue">Jobs</li>
+            <li class="color-blue">Privacy</li>
+            <li class="color-blue">Terms</li>
+            <li class="color-gray">&copy; 2014 Instagram</li>
+          </ul>
+        </div>
+      </footer>
+    </section>
   </body>
 </html>
