--- a/index.html
+++ b/index.html
@@ -5,12 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id="background">
+      <img src="/images/bgtile.png" alt="background" />
+    </section>
+    <section class="content">
+      <main class="main">
+        <div id="image-phone">
+          <img id="phones" src="/images/phones.png" alt="phones" />
+        </div>
+        <div id="main-section">
+          <section id="top">
+            <img src="images/brand.png" alt="instagram-brand-logo" />
+            <button id="log-in-button">
+              <img src="images/home.png" alt="home-logo-loggin" /> Log in
+            </button>
+          </section>
+          <section id="bottom">
+            <div id="text-area">
+              <h1>Capture and Share the World's Moments</h1>
+              <p>
+                Instagram is a fast, beautiful and fun way to share your life
+                with friends and family. Take a picture or video, choose a
+                filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter,
+                Tumblr and more. It's a new way to see the world. Oh yeah, did
+                we mention it's free?
+              </p>
+            </div>
+            <div id="app-buttons">
+              <img src="/images/badge-iphone.png" alt="iphone-app-button" />
+              <img src="/images/badge-android.png" alt="android-app-button" />
+            </div>
+          </section>
+        </div>
+      </main>
+    </section>
+    <footer>
+      <div>About Us</div>
+      <div>Support</div>
+      <div>Blog</div>
+      <div>Press</div>
+      <div>API</div>
+      <div>Jobs</div>
+      <div>Privacy</div>
+      <div>Terms</div>
+      <div id="copyright">&copy; 2014 Instagram</div>
+    </footer>
   </body>
 </html>
