--- a/index.html
+++ b/index.html
@@ -4,13 +4,78 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id=“background”>
+      <!-- <img src="images/bgtile.png" alt=“background” /> -->
+    </section>
+    <main>
+      <div class="container">
+        <div class="img-container">
+          <img
+            class="phone-img"
+            src="./images/phones.png"
+            alt="Phone with the opened Instagram App"
+          />
+        </div>
+        <div class="info-container">
+          <div class="upper-bar">
+            <div class="logo-container">
+              <img src="./images/brand.png" alt="Instagram Brand Logo" />
+            </div>
+            <div class="button-container">
+              <button class="btn-login">
+                <img
+                  class="home-img"
+                  src="./images/home.png"
+                  alt="Logo for Login Button"
+                />
+                <a class="login" href="#">Log In</a>
+              </button>
+            </div>
+          </div>
+          <div class="content">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life with
+              friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="badges">
+              <img
+                src="./images/badge-iphone.png"
+                alt="Badge for Apple Appstore"
+              />
+              <img
+                src="./images/badge-android.png"
+                alt="Badge for Android Phone"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </main>
+    <footer>
+      <ul class="footer-links">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#"></a>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
