--- a/index.html
+++ b/index.html
@@ -4,13 +4,77 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="box-one">
+      <span>
+        <img
+          class="phones-img"
+          src="/images/phones.png"
+        />
+      </span>
+      
+      <div class="box-two">
+        
+        <div class="black-box">
+          <div class="ff">
+        <span>
+          <img
+            class="insta-logo"
+            src="/images/brand.png"
+          />
+        </span>
+        <span class="button">
+          <img
+            class="button-img-logo"
+            src="/images/home.png"
+          />
+          <span class="log-in">Log in</span>
+        </span>
+      </div>
+        <div class="white-box">
+          <span class="text">
+            <h2>
+              Capture and Share<br />
+              the World's Moments
+            </h2>
+            <p>
+              Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
+              <strong>fun</strong> way to share your life,<br />
+              with friends and family.<br /><br />
+              Take a picture or video, choose a filter to transform its look<br />
+              and feel, then post to Instagram &mdash; it's that easy. You can<br />
+              even share to Facebook, Twitter, Tumblr and more. It's a<br />
+              new way to see the world.<br /><br />
+              Oh yeah, did we mention it's free?<br />
+            </p>
+          </span>
+        </div>
+        <div class="last-box">
+          <span>
+            <img class="badge-iphone" src="/images/badge-iphone.png" alt="badge-iphone">
+            <img class="badge-android" src="/images/badge-android.png" alt="bagde-android">
+          </span>
+        </div>
+      </div>
+      </div>
+    </div>
+  
+    <footer class="final-box">
+      <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li id="gray">@2014 INSTAGRAM</li>
+      </ul>
+    </footer>
+    <!-  About Us
+    Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram -->
   </body>
 </html>
