--- a/index.html
+++ b/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="/styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="background">
+      <div class="main">
+        <div class="phonesimg">
+          <img src="/images/phones.png" alt="Phones images with instagram filters on the screen">
+        </div>
+        <div class="rightside">
+        <div class="brandhome">
+          <img class="brandimg" src="/images/brand.png" alt="Instagram brand">
+          <button class="btn" style="display:inline-block">
+            <img src="/images/home.png" style="border: 4px;">Log In
+          </button>
+        </div>
+        <div class="frame">
+          <h1 class="heading">Capture and Share the World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram -- it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div>
+          <img src="/images/badge-iphone.png" alt="App Store download link">
+          <img src="/images/badge-android.png" alt="Google Play download link"></div>
+      </div>
+        <div>
+          
+        </div>
+      </div>
+      <div>
+        <ul>
+          <li>ABOUT US</li>
+          <li>SUPPORT</li>
+          <li>BLOG</li>
+          <li>PRESS</li>
+          <li>API</li>
+          <li>JOBS</li>
+          <li>PRIVACY</li>
+          <li>TERMS</li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
