--- a/index.html
+++ b/index.html
@@ -4,13 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <div class="left-side">
+        <img src="/images/phones.png" alt="iphone-example" />
+      </div>
+      <div class="right-side">
+        <header>
+          <img
+            src="/images/brand.png"
+            alt="instagram-logo"
+            id="instagram-logo"
+          />
+          <button type="button">
+            <img src="/images/home.png" alt="home" />Log in
+          </button>
+        </header>
+        <div class="info">
+        <h2>Capture and Share <br />the World's Moments</h2>
+        <p>
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to
+          share your life with friends and family.<br />
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+          <br />
+          Oh yeah, did we mention it's free?
+        </p>
+
+        <div class="downloads">
+          <a href="#"
+            ><img src="/images/badge-iphone.png" alt="download-on-apple"
+          /></a>
+          <a href="#"
+            ><img src="/images/badge-android.png" alt="download-on-android"
+          /></a>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <ul class="footer-info">
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">Job</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
