html & css for computer done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <div class="left-side">
-        <img src="/images/phones.png" alt="iphone-example" />
+        <img src="/images/phones.png" alt="iphone-example" id="iphone-example"/>
       </div>
       <div class="right-side">
         <header>
