--- a/index.html
+++ b/index.html
@@ -4,13 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="main">
+      <div id="left"><img src="images/phones.png" "Instagram app"></div>
+      <div id="right">
+        <div id="header">
+          <img src="images/brand.png" "Instagram logo">
+          <button><img src="images/home.png"/>Log In</button>
+        </div>
+        <div id="whiteBox">
+          <h2>Capture and Share the World's Moments</h2>
+          <p> Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p> 
+            <p> Oh yeah, did we mention it's free?</p>
+          <img  class="download" src="images/badge-iphone.png" "Badge Iphone">
+          <img  class="download" src="images/badge-android.png" "Badge Android">
+        </div>
+      </div>
+    </section>
+    <section class="footer">
+      <a href="#AboutUs">ABOUT US</a>
+      <a href="#Support">SUPPORT</a>
+      <a href="#Blog">BLOG</a>
+      <a href="#Press">PRESS</a>
+      <a href="#API">API</a>
+      <a href="#Jobs">JOBS</a>
+      <a href="#Privacy">Privacy</a>
+      <a href="#Terms">TERMS</a>
+      <p>&copy; 2014 Instagram</p>
+    </section>
   </body>
 </html>
