--- a/index.html
+++ b/index.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <link rel="stylesheet" href="/styles/style.css" />
+</head>
+
+<body>
+    <header>
+        <section>
+            <div class="insta"><img src="/images/phones.png" alt="phones" /></div>
+            <div class="content">
+                <div class="insta">
+                    <img src="/images/brand.png" alt="brand" />
+
+                    <button class="login">
+              <img src="/images/home.png" alt="home" />Log in
+            </button>
+                </div>
+
+                <div class="text">
+                    <h3>Capture and Share the World's Moments</h3>
+                    <p>
+                        Instagram is a fast, beautiful and fun way to share your life with friends and family.Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and
+                        more. It's a new way to see the world. Oh yeah, did we mention it's free?
+                    </p>
+                </div>
+                <div class="badges">
+                    <img src="/images/badge-iphone.png" alt="badge-iphone" />
+                    <img src="/images/badge-android.png" alt="badge-android" />
+                </div>
+            </div>
+        </section>
+    </header>
+    <footer>
+        <ul>
+            <li> About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li>2014 Instagram</li>
+        </ul>
+    </footer>
+</body>
+
 </html>
