--- a/index.html
+++ b/index.html
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <title>Instagram</title>
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="box">
+      <div class="container">
+        <div class="left-side">
+          <img
+            class="phone-image"
+            src="./images/phones.png"
+            alt="iPhone image"
+          />
+        </div>
+        <div class="right-side">
+          <div class="header-right">
+            <img src="./images/brand.png" alt="Instagram Logo" />
+            <button type="button">
+              <img src="./images/home.png" alt="Home icon" />
+              <span>Log in</span>
+            </button>
+          </div>
+          <div class="content">
+            <div class="text">
+              <h2>
+                Capture and Share <br />
+                the World's Moments
+              </h2>
+              <br />
+              <p>
+                Instagram is a <strong>fast</strong>,
+                <strong>beautiful</strong> and <strong>fun</strong> way to share
+                your life with friends and family.
+              </p>
+
+              <p>
+                Take a picture or video, choose a filter to transform its look
+                and feel, then post to Instagram &mdash; it's that easy. You can
+                even share to Facebook, Twitter, Tumblr and more. It's a new way
+                to see the world.
+              </p>
+
+              <p>Oh yeah, did we mention it's free?</p>
+
+              <p>Download on the App Store Get it on Google Play</p>
+            </div>
+            <div class="store-images">
+              <img src="./images/badge-iphone.png" alt="AppStore" />
+              <img src="./images/badge-android.png" alt="Playstore" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+    </div>
   </body>
 </html>
