--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <div><img src="./images/brand.png" class="logo" alt="logo" /></div>
+      <div>
+        <button class="home">
+          <img src="./images/home.png" alt="button home" /> Log in
+        </button>
+      </div>
+    </header>
+
+    <section class="description">
+      <img src="./images/phones.png" alt="phones" />
+      <div class="container">
+        <h2>Instagram Capture and Share the World's Moments</h2>
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram - it's that easy. You can even share to
+          Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+
+      <div class="app">
+        <img src="images/badge-android.png" alt="badge-android" />
+        <img src="images/badge-iphone.png" alt="badge-iphone" />
+      </div>
+    </section>
+
+    <footer>
+      <ul>
+        <li><a href="#"> About Us </a></li>
+        <li><a href="#"> Support</a></li>
+        <li><a href="#"> Press</a></li>
+        <li><a href="#"> API</a></li>
+        <li><a href="#"> Jobs</a></li>
+        <li><a href="#"> Privacy</a></li>
+        <li><a href="#"> Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
