--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                   src="./images/home.png"
                   alt="Logo for Login Button"
                 />
-                <a class="login" href="#">Log In</a>
+                <a class="login-link" href="#">Log In</a>
               </button>
             </div>
           </div>
           <div class="content">
-            <h1>Capture and Share the World's Moments</h1>
+            <h1>Capture and Share<br> the World's Moments</h1>
             <p>
               Instagram is a fast, beautiful and fun way to share your life with
               friends and family.
@@ -74,7 +74,7 @@
         <li><a href="#">Jobs</a></li>
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Terms</a></li>
-        <li><a href="#"></a>&copy; 2014 Instagram</li>
+        <li><a class="grey-color" href="#">&copy; 2014 Instagram</a></li>
       </ul>
     </footer>
   </body>
