--- a/index.html
+++ b/index.html
@@ -4,13 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section>
+      <div class="blue-black">
+        <div class="brand">
+          <img src="images/brand.png" alt="Instagram brand" />
+        </div>
+        <div class="home">
+          <img src="images/home.png" alt="Home icon" />
+          <a href="#">Log in</a>
+        </div>
+      </div>
+    </section>
+
+    <main class="middle">
+      <div class="phones">
+        <img src="images/phones.png" alt="mobile image" />
+      </div>
+      <div class="instagram">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>
+          Instagram is a <span>fast</span>, <span>beautiful</span> and
+          <span>fun</span> way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram - it's that easy. You can even share to
+          Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png" alt="app store icon" />
+        <img src="images/badge-android.png" alt="google play icon" />
+      </div>
+    </main>
+
+    <footer>
+      <div class="end">
+        <a href="#">ABOUT US</a>
+        <a href="#">SUPPORT</a>
+        <a href="#">BLOG</a>
+        <a href="#">PRESS</a>
+        <a href="#">API</a>
+        <a href="#">JOBS</a>
+        <a href="#">PRIVACY</a>
+        <a href="#">TERMS</a>
+        <span>&copy;2014 INSTAGRAM</span>
+      </div>
+    </footer>
   </body>
 </html>
