--- a/index.html
+++ b/index.html
@@ -1,16 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div>
+      <div>
+        <img class="iphones-img" src="/images/phones.png" alt="two-iphones" />
+      </div>
+      <div class="main-div">
+        <div class="div-instagram-logo">
+          <img
+            class="instagram-img"
+            src="/images/brand.png"
+            alt="Instagram-brand"
+          />
+          <button class="btn"><i class="fa fa-home"></i> Log in</button>
+          <!-- <img class="home-logo" src="/images/home.png" alt="home-icon" />
+          <button class="button" type="submit">Log in</button> -->
+        </div>
+        <div class="column-div">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="badge-imgs">
+          <img
+            class="badge-size"
+            src="/images/badge-android.png"
+            alt="android-img"
+          />
+          <img
+            class="badge-size"
+            src="/images/badge-iphone.png"
+            alt="iphone-img"
+          />
+        </div>
+      </div>
+    </div>
+    <div>
+      <nav>
+        <ul>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a class="instagram-2014">2014 Instagram</a></li>
+        </ul>
+      </nav>
+    </div>
   </body>
 </html>
