--- a/index.html
+++ b/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section>
+      <div>
+        <img src="/images/phones.png" alt="Phones Image" />
+      </div>
+      <div>
+        <div class="title">
+          <img class="brand" src="/images/brand.png" alt="Instragram Title" />
+          <button type="" class ="button">
+            <img src="/images/home.png" alt="">
+            <h3>Log In</h3> 
+          </button>
+        </div class="text-box">
+        <div class="text">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Intagram is <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to
+            share your life with friends and family
+          </p>
+          <p>
+            Take a picture or video, chosose a filter to transform its look and
+            feel, then post to Instagram - it's that ease. You can even share to
+            Facebook, Twitter, Tumbler and more. It's a new way to see the
+            world.
+          </p>
+        <p>Oh yeah, did we meantion it's free?</p>
+      </div>
+      <div class="badges">
+        <img src="/images/badge-iphone.png" alt="" />
+      <img class="android-badge" src="/images/badge-android.png" alt="" />
+    </div>  
+      <div class="footer-nav ">
+          <ul>
+            <li><b>ABOUT US</b></li>
+            <li><b>SUPPORT</b></li>
+            <li><b>BLOG</b></li>
+            <li><b>PRESS</b></li>
+            <li><b>API</b></li>
+            <li><b>JOBS</b></li>
+            <li><B>PRIVACY</B></li>
+            <li><B>TERMS</B></li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
