--- a/index.html
+++ b/index.html
@@ -4,13 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="bg-img"></div>
+    <section class="features">
+      <div class="app">
+        <img src="/images/phones.png" alt="phones with the app opened" />
+      </div>
+      <div class="text">
+        <div class="text-head">
+          <div><img src="/images/brand.png" alt="Instagram logo" /></div>
+          <div>
+            <button>
+              <img src="/images/home.png" alt="home icon" />
+              <p>Log in</p>
+            </button>
+          </div>
+        </div>
+        <div class="bg-white">
+          <div>
+            <h1>Capture and Share the World's Moments</h1>
+          </div>
+          <div>
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life
+              <br />
+              with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look
+              <br />
+              and feel, then post to Instagram &mdash; it's that easy. You can
+              <br />
+              even share to Facebook, Twitter, Tumblr and more. It's a <br />
+              new way to see the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div>
+            <img src="/images/badge-iphone.png" alt="App Store badge" />
+            <img src="/images/badge-android.png" alt="Play Store badge" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <p>&copy; 2014 Instagram</p>
+    </footer>
   </body>
 </html>
