--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
+    <title>Instagram Clone .</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
