--- a/index.html
+++ b/index.html
@@ -7,10 +7,26 @@
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
+  <section class="landing">
+    <img src="/images/phones.png" alt="phone view">
+    </section>
+  <section class="main-container"></section>
+    <header>
+    <img src="/images/brand.png" alt="">
+    <button>Log in</button>
+    </header>
+    <div class="main"></div>
+    <h1>Capture and Share the World's Moments</h1>
+    <h2>Instagram is a fast, beautiful and fun way share your life with friends and family.</h2>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+    <div class="apps">
+      <img src="/images/badge-iphone.png" alt="badge app store">
+      <img src="/images/badge-android.png" alt="badge google play">
+    </div>
+  </section>
+     Download on the App Store Get it on Google Play About Us Support Blog Press API
     Jobs Privacy Terms &copy; 2014 Instagram
   </body>
 </html>
