done, boton improvisado

--- a/index.html
+++ b/index.html
@@ -4,13 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel='stylesheet' href="/styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <img src="./images/phones.png" alt="phones-img"/>
+      <section id="headerRight">
+        <div id="brand">
+          <img src="./images/brand.png" alt="brand-logo"/>
+          <div id="igBoton">
+            <img src='./images/home.png' alt="inicio"/><p><b>Log in</b></p>
+          </div>
+        </div>
+        <div class="intro">
+          <h1>Capture and Share the World's Moments</h1>
+          <div id="intro">
+            <p>
+            <br>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.<br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>Oh yeah, did we mention it's free?
+            </p>
+          </div>
+        </div>
+        <div id="eShops">
+          <img src="./images/badge-iphone.png" alt="appstore-logo" id="appStore">
+          <img src="./images/badge-android.png" alt="playstore-logo" id="playStore">
+        </div>
+      </section>
+    </header>
+    <footer>
+      <ul>
+        <li><b>About Us</b></li>
+        <li><b>Support</b></li>
+        <li><b>Blog</b></li>
+        <li><b>Press</b></li>
+        <li><b>API</b></li>
+        <li><b>Jobs</b></li>
+        <li><b>Privacy</b></li>
+        <li><b>Terms</b></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
+
+      
+       
