fixed html and did css. Done

--- a/index.html
+++ b/index.html
@@ -4,29 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
+
   <body>
-  <section class="landing">
-    <img src="/images/phones.png" alt="phone view">
-    </section>
-  <section class="main-container"></section>
-    <header>
-    <img src="/images/brand.png" alt="">
-    <button>Log in</button>
-    </header>
-    <div class="main"></div>
-    <h1>Capture and Share the World's Moments</h1>
-    <h2>Instagram is a fast, beautiful and fun way share your life with friends and family.</h2>
-    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-    <p>Oh yeah, did we mention it's free?</p>
-    <div class="apps">
-      <img src="/images/badge-iphone.png" alt="badge app store">
-      <img src="/images/badge-android.png" alt="badge google play">
+  <div class="wrapper">
+      <section class="column_container landing">
+        <img src="/images/phones.png" alt="phone view">
+        </section>
+
+      <section class="main_container">
+        <header>
+        <img src="/images/brand.png" alt="instagram main logo">
+        <div class="login"><img src="/images/home.png" alt="log in icon">Log in</div>
+        </header>
+        <div class="main">
+        <h1>Capture and Share</br> the World's Moments</h1>
+        <h2>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way share your life with friends and family.</h2>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="apps">
+          <img src="/images/badge-iphone.png" alt="badge app store">
+          <img src="/images/badge-android.png" alt="badge google play">
+        </div>
+      </section>
     </div>
-  </section>
-     Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  </div>
+ 
+  <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>    
+    </footer>   
   </body>
 </html>
