--- a/index.html
+++ b/index.html
@@ -4,14 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css"
   </head>
   <body>
-    ghfgf
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <div class="mainContainer">
+    <img src="images/phones.png" alt="phones">
+
+    <div class="smalerContainer">
+
+      <div class="imagesContainer">
+      <img class="instagramLogo" src="images/brand.png" alt="instagram-logo">
+      <button class="logInButton" type="button"> <img class="haus" src="images/home.png" alt="haus"/> <strong>Log in</strong></button>
+    </div>
+
+    <div class="textContainer">
+      <h2>Capture and Share <br> the World's Moments</h2>
+    <p>Instagram is a <strong> fast</strong>, <strong> beautiful</strong> and <strong>fun </strong> way to share your life with
+      friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </div>
+
+      <div class="linksContainer">
+      <a href="#AppStoreButton" class="AppStoreButton"> <img src="images/badge-iphone.png" alt="AppStore button"/></a>  
+      <a href="#GooglePlayButton" class="GooglePlayButton"> <img src="images/badge-android.png" alt="GooglePlay button"/></a>  
+    </div>  
+
+  </div>
+</div>
+  <ul> 
+    <li><strong>About Us</strong></li>
+    <li><strong>Support</strong></li>
+    <li><strong>Blog</strong></li>
+    <li><strong>Press</strong></li>
+    <li><strong>API</strong></li>
+    <li><strong>Jobs</strong></li>
+    <li><strong>Privacy</strong></li>
+    <li><strong>Terms</strong></li>
+    <li class="copyright"><strong>&copy; 2014 Instagram</strong></li>
+  
+  </ul>
   </body>
 </html>
