--- a/index.html
+++ b/index.html
@@ -5,13 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div><img src="images\phones.png" alt="phones"></div>
+
+    <div>
+      <img src="images\brand.png" alt="brand">
+      <button> <img src="images\home.png" alt="home"> Log in</button>
+    </div>
+
+  <div>
+    <h2>Capture and Share <br> the World's Moments</h2>
     
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life <br> 
+      with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look <br> 
+      and feel, then post to Instagram
+    &mdash; it's that easy. You can <br> 
+    even share to Facebook, Twitter, Tumblr and more. It's a <br> 
+    new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+  </div>
+
+  <div>
+    <img src="images\badge-iphone.png" alt="badge-iphone">
+    <img src="images\badge-android.png" alt="badge-android">
+  </div>
+
+  <footer>
+    <nav>
+      <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li>&copy; 2014 INSTAGRAM</li>
+      </ul>
+    </nav>
+  </footer>
+       
   </body>
 </html>
+
