--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div><img src="images\phones.png" alt="phones"></div>
+    <div class="phones"><img src="images\phones.png" alt="phones"></div>
 
     <div>
       <img src="images\brand.png" alt="brand">
@@ -34,21 +34,21 @@
     <img src="images\badge-android.png" alt="badge-android">
   </div>
 
-  <footer>
-    <nav>
-      <ul>
-        <li>ABOUT US</li>
-        <li>SUPPORT</li>
-        <li>BLOG</li>
-        <li>PRESS</li>
-        <li>API</li>
-        <li>JOBS</li>
-        <li>PRIVACY</li>
-        <li>TERMS</li>
-        <li>&copy; 2014 INSTAGRAM</li>
+  
+   
+      <ul class="navigation">
+        <li><a href=""></a> ABOUT US</li>
+        <li><a href=""></a> SUPPORT</li>
+        <li><a href=""></a> BLOG</li>
+        <li><a href=""></a> PRESS</li>
+        <li><a href=""></a> API</li>
+        <li><a href=""></a> JOBS</li>
+        <li><a href=""></a> PRIVACY</li>
+        <li><a href=""></a> TERMS</li>
+        <li id="gray"><a href=""></a> &copy; 2014 INSTAGRAM</li>
       </ul>
-    </nav>
-  </footer>
+   
+ 
        
   </body>
 </html>
