--- a/index.html
+++ b/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+      <div class="iphone">
+      <img src="images/phones.png" width="90%" height="80%" />
+    </div>
+    <nav class="banner">
+      <img src="images/brand.png" width="30%" height="20%" />
+      <div class="login">
+        <img src="images/home.png" />
+        Log in
+      </div>
+      <nav class="body">
+        <div class="titles">
+          <p>
+            <b
+              >Capture and Share <br />
+              the World's Moments</b
+            >
+          </p>
+        </div>
+        <div class="paragraph">
+          <p>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to
+            share your life with friends and family.
+          </p><br>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p><br>
+          <p>Oh yeah, did we mention it's free?</p>
+        <div class="apps">
+        <img src="images/badge-iphone.png" width="40%" height="40%"/>
+        <div class="apps2">
+        <img src="images/badge-android.png" width="100%" height="90%" /></div>
+        </div>
+      </nav>
+
+  <footer class = "footer">
+  <li><b>About Us</b></li>
+  <li><b>Support</b></li> 
+  <li><b>Blog</b></li>
+  <li><b>Press</b></li>
+  <li><b>API</b></li>
+  <li><b>Jobs</b></li>
+  <li><b>Privacy</b></li>
+  <li><b>Terms</b></li>
+  <li> &copy; 2014 Instagram</li>
+  </footer>
+    </nav>
   </body>
 </html>
