--- a/index.html
+++ b/index.html
@@ -4,13 +4,105 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <header>
+
+    </header>
+
+
+
+    <div class="mainHead">
+
+      <aside class="aside">
+        <img src="images/phones.png" alt="phones" />
+      </aside>
+
+<div class="rightSide">
+
+  <div>
+    <nav class="navi">
+      <img src="images/brand.png" alt="brand" />
+
+      <button class="linkButton">
+      <img src="images/home.png" alt="home" />
+
+      <p>Log in</p>
+
+    </button>
+
+    </nav>
+  </div>
+
+
+      <article id="section1">
+
+
+        
+        <h3>Capture and Share the World's Moments</h3>
+
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with
+          friends and family. Take a picture or video, choose a filter to
+          transform its look and feel, then post to Instagram &mdash; it's that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a
+          new way to see the world. Oh yeah, did we mention it's free?
+        </p>
+
+        <div class="picturesBlock"> 
+          <article>
+            <img src="images/badge-iphone.png" alt="badge-iphone" />
+          </article>
+
+          <article>
+            <img src="images/badge-android.png" alt="badge-android" />
+          </article>
+        </div>
+      </article>
+    </div>
+  </div>
+
+    <footer>
+      <ul class="ul">
+        <li>
+          <a href="https://twitter.com/ironhack" target="_blank">About Us</a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/theironhack" target="_blank"
+            >Blog</a
+          >
+        </li>
+        <li>
+          <a href="https://www.instagram.com/ironhack/" target="_blank"
+            >Press</a
+          >
+        </li>
+        <li>
+          <a href="https://www.instagram.com/ironhack/" target="_blank">API</a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/ironhack/" target="_blank">Jobs</a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/ironhack/" target="_blank"
+            >Privacy</a
+          >
+        </li>
+        <li>
+          <a href="https://www.instagram.com/ironhack/" target="_blank"
+            >Terms</a
+          >
+        </li>
+        <li>
+          <a class="instaText" href="https://www.instagram.com/ironhack/" target="_blank"
+            >&copy; 2014 Instagram</a
+          >
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
