--- a/index.html
+++ b/index.html
@@ -4,13 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="backgroundBlue">
+      <div class="columnas">
+        <div class="divImagenIphones">
+          <img src="./images/phones.png" alt="celulares">
+        </div>
+        <div class="divColumnaDerecha">
+          <div class="divImagenInsta">
+            <div class="divImgINStaLetras">
+              <img src="./images/brand.png">
+            </div>
+            <div class="DivLog">
+              <img src="./images/home.png">
+              <a href="#">Log in</a>
+            </div>
+          </div>
+          <div class="text">
+            <h2>Capture and Share <br>
+             the World's Moments</h2>
+            <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+              friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="Dispositivos">
+              <div>
+                <img src="./images/badge-iphone.png" >
+              </div>
+              <div>
+                <img src="./images/badge-android.png" >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div style="background-color: white; height: 260px;"></div></div>
+    <footer>
+      <div>
+        <ul >
+          <li><a href="#">ABOUT US</a></li>
+          <li><a href="#">SUPPORT</a></li>
+          <li><a href="#">BLOG</a></li>
+          <li><a href="#">PRESS</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">JOBS</a></li>
+          <li><a href="#">PRIVACY</a></li>
+          <li><a href="#">TERMS</a></li>
+          <li><p>2014 INSTAGRAM</p></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
