--- a/index.html
+++ b/index.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <title>Instagram</title>
+</head>
+
+
+<body>
+    <div class = "top-right"> 
+      <div class= "top-bar"> 
+        <div class = "brand">  
+        
+          <img src="./images/brand.png" width = 350></img>
+        </div>
+        <div class = "login-bar"> 
+          <a class = "home-logo"> 
+            <img src="./images/home.png" width = 30> </img> 
+          </a>
+          <a class = "login"> Log in</a>
+        </div>
+    </div>
+
+    <div class= "textbox"> 
+      
+      <div class ="text-style1">Capture and Share the World's Moments </div>
+
+      <p class ="text-style2"> Instagram is a <b>fast, beautiful</b> and <b>fun </b> way to share your life with
+          friends and family.
+    <br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy.
+         You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <br>
+        Oh yeah, did we mention it's free?
+    </p>
+</div>
+
+<div class= "apps">
+    <div class = "app-box">
+      <img src="./images/badge-iphone.png"> </img>
+    </div>
+    <div class = "app-box">
+    <img src="./images/badge-android.png"> </img>
+    </div>
+  </div>
+  </div>
+
+<div class = "cellphone">
+  <img src="./images/phones.png" width = 300></div> 
+</div>
+
+
+</body>
+<footer>  
+    <div class = "footer-style"> ABOUT US</div>
+    <div class = "footer-style"> SUPPORT</div>
+    <div class = "footer-style"> BLOG</div>
+    <div class = "footer-style"> PRESS</div>
+    <div class = "footer-style"> API</div>
+    <div class = "footer-style"> JOBS</div>
+    <div class = "footer-style"> PRIVACY</div>
+    <div class = "footer-style"> TERMS</div>
+    <div id = "copyright">&copy; 2014 INSTAGRAM</div>
+</footer>
 </html>
