--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="main">
+      <div class="izq">
+        <img src="./images/phones.png" alt="" srcset="" />
+      </div>
+      <div class="der">
+        <!-- header -->
+        <div class="header">
+          <img src="./images/brand.png" alt="" srcset="" />
+          <div class="boton">
+            <img src="./images/home.png" alt="" />
+            <h3>Log in</h3>
+          </div>
+        </div>
+        <!-- header -->
+        <article class="texto">
+          <h2>Capture and Share <br />the World's Moments</h2>
+          <p>
+            Instagram is a <strong> fast, beautiful</strong> and <strong> fun </strong> way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="imagenes">
+            <img src="./images/badge-iphone.png" alt="" srcset="" />
+            <img src="./images/badge-android.png" alt="" srcset="" />
+          </div>
+        </article>
+      </div>
+      <!-- Pie de Pagina -->
+    </section>
+    <section class="footer">
+      <nav class="navbar">
+        <ul>
+          <li>ABOUT US</li>
+          <li>SUPPORT</li>
+          <li>BLOG</li>
+          <li>PRESS</li>
+          <li>API</li>
+          <li>JOBS</li>
+          <li>PRIVACY</li>
+          <li>TERMS</li>
+          <li class="claro">&copy; 2014 INSTAGRAM</li>
+        </ul>
+      </nav>
+    </section>
   </body>
 </html>
